fix: remove scrollbar in iframe

--- a/src/pages/WebletterView.css
+++ b/src/pages/WebletterView.css
@@ -98,6 +98,8 @@
   height: 100%;
   border-radius: 16px;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 4px;
+
+  overflow-y: hidden;
 }
 
 .plain-text {
